@@ -1,3 +1,9 @@
+2005-08-01  Dennis Cranston <dennis_cranston@yahoo.com>
+
+	* gsearchtool.c (setup_case_insensitive_arguments):
+	Fix bug 312136, "gsearchtool tries to locate /dev/null
+	and fails on systems that don't index /dev".
+	
 2005-07-31  Dennis Cranston <dennis_cranston@yahoo.com>
 
 	* gsearchtool.c (build_search_commmand):  Fix the gconf
